--- a/index.html
+++ b/index.html
@@ -98,11 +98,10 @@
       </div>
     </div>
 <!--Dividing section-->
-<div class="divide-bar"><h1>The 7 Main  Types of Artifical Intelligence </h1></div>
-<div id="process-container">
-  <h2>The Creation Process</h2>
+ <div id="flex-container">
+   <div class="divide-bar"><h1>The 7 Main  Types of Artifical Intelligence </h1></div>
+<div id="types-container">
 </div>
-  <div class="aitypes">
  <h2>Narrow AI or Also Known As ANI</h2>
     
 <p>Narrow AI is any kind of artificial intelligence system and/or form of AI technology that's sole purpose is to complete a set of
