--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
       </div>
   </body>
 <!--Dividing section-->
- <div id="flex-container">
+ <div id="types-container">
    <div class="divide-bar"><h1>The 7 Main  Types of Artifical Intelligence </h1></div>
 <div id="types-container">
 </div>
