--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 <!--Dividing section-->
  <div id="types-container">
    <div class="divide-bar"><h1>The 7 Main  Types of Artifical Intelligence </h1></div>
-<div id="types-container">
+<div class="types-section">
 </div>
  <h2>Narrow AI or Also Known As ANI</h2>
     
