css and index fixes
beautifying text.

--- a/index.html
+++ b/index.html
@@ -201,6 +201,7 @@ self-driving cars, and AI virtual assistants.</p>
 <br>
 
 <h2>Artifical Genral Intelligence (AGI)</h2>
+<h2>Artifical General Intelligence (AGI)</h2>
 
 <p>Artificial General Intelligence and/or general AI is any form of artificial intelligence that's capacity for thinking, learning, and 
 preforming more closely resembles that of a real person, as it's able to preform more divesive and detailed directions/tasks. While 
