--- a/index.html
+++ b/index.html
@@ -220,11 +220,20 @@ better at everything that we do."</p>
 
 <h2>Reactive Machine AI</h2>
 
-<p>Reactive Machine AI's are </p>
+<p>While reactive machine AI's are the most fundemntal type of AI and can respond to immediate requests/tasks, the technology is greatly limited 
+in terms of storing memory, learning from past experiences and absed on that learning ehancing one's own efficiency and responding to combinations 
+of inputs. Additionally, reactive machine AI's also come in handy when mainly preforming autonomous functions, such as filtering spam from email 
+box's and recommending items to online shoppers based off of their personal shopping history. An example of such would be the reactive AI machine
+Deep Blue, whihc in 1997 beat grandmaster Garry Kasparov in a game of chess.</p>
 
 <h2>Limited Memory AI</h2>
 
-<p>...</p>
+<p>The expertises of limited memory AI can be found in it's ability to store previously retrieved data and then anazlye it to make predictions
+Limited memory AI heavily depends on a sub-set of machine learning that's called "deep learning" which operates simiarily to that of neurons
+inside the human brain. Through, such the machine is able to provess data from experiences and "learn" from them, iincreasing it's own 
+accuracy and overall, functionality. The impact of this kind of AI can be seen from the sheer fact that a majority of today's AI applications
+are derived from the limited memeory model and range from chatbots and virtual assistants to self-driving cars that constantly observe and 
+process environmental data around them while driving on roads.</p>
 
 <h2>Theory of Mind AI</h2>
 
