--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       crossorigin="anonymous"
     ></script>
     <script type="text/javascript" src="./js/nodes.js"></script>
-    <script type = "text/javascript" src="./js/tracery.js" defer></script>
+    <!---<script type = "text/javascript" src="./js/tracery.js" defer></script>--->
     <script type="text/javascript" src="./js/index.js" defer></script>
     <script type="text/javascript" src="./js/timeline.js"></script>
   </head>
@@ -99,7 +99,6 @@
         </p>
       </div>
     </div>
-<<<<<<< Updated upstream
     <body>
       <div class="timeline">
           <div class="container">
@@ -180,12 +179,7 @@
    <div class="divide-bar"><h1>The 7 Main  Types of Artifical Intelligence </h1></div>
 <div class="types-section">
 </div>
-=======
-    <br>
-<!--Dividing section-->
-<div class="divide-bar"><h1>The 7 Main  Types of Artifical Intelligence </h1></div>
-  <div class="aitypes">
->>>>>>> Stashed changes
+<div class = "aitypes">
  <h2>Narrow AI or Also Known As ANI</h2>
     
 <p>Narrow AI is any kind of artificial intelligence system and/or form of AI technology that's sole purpose is to complete a set of
@@ -233,7 +227,7 @@ better at everything that we do."</p>
 <h2>Self-Aware AI</h2>
 
 <p>.....</p>
-
+</div>
   </body>
   </html>
 
