--- a/index.html
+++ b/index.html
@@ -175,70 +175,68 @@
           </div>
       </div>
   </body>
-=======
-    <br>
->>>>>>> Stashed changes
-   
+
   <!--Dividing section-->
  <div id="types-container">
-   <div class="divide-bar"><h1>The 7 Main  Types of Artifical Intelligence </h1></div> 
-  
-    
-    <h2>Narrow AI or Also Known As ANI</h2>
-    
-<p>Narrow AI is any kind of artificial intelligence system and/or form of AI technology that's sole purpose is to complete a set of
-very specific actions or basic commands. While ANI's are created with the intended goal in mind of serving and exceling in a cognitive 
-capability, this particular sub-category of AI technologies still aren't able to independently learn new skills that it's not
-already programmed and/or wasn't intially designed to learn. These kind of technologies are developed by combining a subfield of 
-artifical intelligence called "machine learning" with neural network algorithms to fucntion properly and accomplish the specificed 
-tasks it's programmed to complete. Through machine learning, AI systems are provided with the ability to process data and statistics, 
-while simultaneously applying problem-solving strategies that are similar to that of strategies used by actual people, like that of 
-trail and error, to improve it's own processes and "think" at faster rates. Examples of such A.I. include image recognition software,
-self-driving cars, and AI virtual assistants.</p>
-
-<br>
-
-<h2>Artifical Genral Intelligence (AGI)</h2>
-
-<p>Artificial General Intelligence and/or general AI is any form of artificial intelligence that's capacity for thinking, learning, and 
-preforming more closely resembles that of a real person, as it's able to preform more divesive and detailed directions/tasks. While 
-AGI's are still a working progress, the fundamental framework for this type of AI may be constructed from technologies such as 
-supercomputers, quantum hardware and generative AI models like that of ChatGPT.</p>
-
-
-<h2>Artificial Superintelligence</h2>
-
-<p>Artificial Superintelligence and/or super AI is more of a figment of the imgaination and is showcased through numerous science fiction movies 
-like that of The Termninator and Machina. It's the infamously known theroy that artificial intelligence will become significantly more 
-knowledgable and efficient than humans, eventually becoming the backbone of another sub-genre of AI called self-aware AI and other 
-individualistic, robotic projects. As CEO of the AI writing company, Jasper, Dave Rogenmoser once said himself,"Artificial superintelligence
-will become by far the most capable forms of intelligence on earth.... It will have the intelligence of human beings and will be exceedingly
-better at everything that we do."</p>
-
-<h2>Reactive Machine AI</h2>
-
-<p>While reactive machine AI's are the most fundemntal type of AI and can respond to immediate requests/tasks, the technology is greatly limited 
-in terms of storing memory, learning from past experiences and absed on that learning ehancing one's own efficiency and responding to combinations 
-of inputs. Additionally, reactive machine AI's also come in handy when mainly preforming autonomous functions, such as filtering spam from email 
-box's and recommending items to online shoppers based off of their personal shopping history. An example of such would be the reactive AI machine
-Deep Blue, whihc in 1997 beat grandmaster Garry Kasparov in a game of chess.</p>
-
-<h2>Limited Memory AI</h2>
-
-<p>The expertises of limited memory AI can be found in it's ability to store previously retrieved data and then anazlye it to make predictions
-Limited memory AI heavily depends on a sub-set of machine learning that's called "deep learning" which operates simiarily to that of neurons
-inside the human brain. Through, such the machine is able to provess data from experiences and "learn" from them, iincreasing it's own 
-accuracy and overall, functionality. The impact of this kind of AI can be seen from the sheer fact that a majority of today's AI applications
-are derived from the limited memeory model and range from chatbots and virtual assistants to self-driving cars that constantly observe and 
-process environmental data around them while driving on roads.</p>
-
-<h2>Theory of Mind AI</h2>
-
-<p>.....</p>
-
-<h2>Self-Aware AI</h2>
-
-<p>.....</p>
+   <div class="divide-bar">
+     <h1>The 7 Main  Types of Artifical Intelligence </h1>
+   </div> 
+   <div class="sub-title">
+     <h2> Narrow AI or Also Known As ANI </h2>
+     <ul>
+       <il>
+         <p>Narrow AI is any kind of artificial intelligence system and/or form of AI technology that's sole purpose is to complete a set of
+          very specific actions or basic commands. While ANI's are created with the intended goal in mind of serving and exceling in a cognitive 
+          capability, this particular sub-category of AI technologies still aren't able to independently learn new skills that it's not
+          already programmed and/or wasn't intially designed to learn. These kind of technologies are developed by combining a subfield of 
+          artifical intelligence called "machine learning" with neural network algorithms to fucntion properly and accomplish the specificed 
+          tasks it's programmed to complete. Through machine learning, AI systems are provided with the ability to process data and statistics, 
+          while simultaneously applying problem-solving strategies that are similar to that of strategies used by actual people, like that of 
+          trail and error, to improve it's own processes and "think" at faster rates. Examples of such A.I. include image recognition software,
+          self-driving cars, and AI virtual assistants.</p>
+       </il>
+       <il>
+         <h3>Artifical Genral Intelligence (AGI)</h3>
+         <p>Artificial General Intelligence and/or general AI is any form of artificial intelligence that's capacity for thinking, learning, and 
+            preforming more closely resembles that of a real person, as it's able to preform more divesive and detailed directions/tasks. While 
+            AGI's are still a working progress, the fundamental framework for this type of AI may be constructed from technologies such as 
+            supercomputers, quantum hardware and generative AI models like that of ChatGPT.</p>
+       </il>
+       <il>
+         <h4>Artificial Superintelligence</h4>
+         <p>Artificial Superintelligence and/or super AI is more of a figment of the imgaination and is showcased through numerous science fiction movies 
+            like that of The Termninator and Machina. It's the infamously known theroy that artificial intelligence will become significantly more 
+            knowledgable and efficient than humans, eventually becoming the backbone of another sub-genre of AI called self-aware AI and other 
+            individualistic, robotic projects. As CEO of the AI writing company, Jasper, Dave Rogenmoser once said himself,"Artificial superintelligence
+            will become by far the most capable forms of intelligence on earth.... It will have the intelligence of human beings and will be exceedingly
+            better at everything that we do."</p>
+       </il>
+       <il>
+         <h5>Reactive Machine AI</h5>
+         <p>While reactive machine AI's are the most fundemntal type of AI and can respond to immediate requests/tasks, the technology is greatly limited 
+            in terms of storing memory, learning from past experiences and absed on that learning ehancing one's own efficiency and responding to combinations 
+            of inputs. Additionally, reactive machine AI's also come in handy when mainly preforming autonomous functions, such as filtering spam from email 
+            box's and recommending items to online shoppers based off of their personal shopping history. An example of such would be the reactive AI machine
+            Deep Blue, whihc in 1997 beat grandmaster Garry Kasparov in a game of chess.</p>
+       </il>
+       <il>
+         <h6>Limited Memory AI</h6>
+         <p>The expertises of limited memory AI can be found in it's ability to store previously retrieved data and then anazlye it to make predictions
+            Limited memory AI heavily depends on a sub-set of machine learning that's called "deep learning" which operates simiarily to that of neurons
+            inside the human brain. Through, such the machine is able to provess data from experiences and "learn" from them, iincreasing it's own 
+            accuracy and overall, functionality. The impact of this kind of AI can be seen from the sheer fact that a majority of today's AI applications
+            are derived from the limited memeory model and range from chatbots and virtual assistants to self-driving cars that constantly observe and 
+            process environmental data around them while driving on roads.</p>
+       </il>
+       <il>
+         <h7>Theory of Mind AI</h7>
+         <p>.....</p>
+       </il>
+       <il>
+         <h8>Self-Aware AI</h8>
+         <p>......</p>
+       </il>
+     </ul>
  </div>
 
   </body>
