--- a/index.html
+++ b/index.html
@@ -238,14 +238,11 @@
        </il>
      </ul>
    </div>
-<footer>
-  <div id="backTop">
-    <p><a href="#top"</a></p>
-  </div>
-</footer>
+   
+<div id="backTop">
+    <p><a href="#top">back to the top</a></p>
+</div>
 
-   
-   
 
   </body>
   </html>
