--- a/index.html
+++ b/index.html
@@ -177,6 +177,7 @@
 <!--Dividing section-->
  <div id="types-container">
    <div class="divide-bar"><h1>The 7 Main  Types of Artifical Intelligence </h1></div>
+   <div class="divide-bar"><h1>The 7 Main Types of Artifical Intelligence </h1></div>
 <div class="types-section">
 </div>
 <div class = "aitypes">
