random fact given during mouseover
changes to popup css, element id html, added getrandomfact function for random value when moused over

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <!--Pop up element sections, can be rearranged if the area is not where we want the content to be-->
     <div id="container-popup">
       <div class="popup" id="popup">
-        <img src="img/infographic_1.jpg" />
+        <!---<img src="img/infographic_1.jpg" /> --->
         <p>Test</p>
       </div>
     </div>
@@ -50,23 +50,23 @@
         <button class="head"></button>
         <button id="person-1" class="enlarge"></button>
       </div>
-      <div class="box-1 double">
+      <div id="element" class="box-1 double hover-element">
         <button class="head"></button>
-        <button id="person-2" class="enlarge"></button>
+        <button id="person-1" class="enlarge"></button>
       </div>
-      <div class="box-1 double">
+      <div id="element" class="box-1 double hover-element">
         <button class="head"></button>
-        <button id="person-3" class="enlarge"></button>
+        <button id="person-1" class="enlarge"></button>
       </div>
-      <div class="box-1 double">
+      <div id="element" class="box-1 double hover-element">
         <button class="head"></button>
         <button id="person-4" class="enlarge"></button>
       </div>
-      <div class="box-1 double">
+      <div id="element" class="box-1 double hover-element">
         <button class="head"></button>
         <button id="person-5" class="enlarge"></button>
       </div>
-      <div class="box-1 double">
+      <div id="element" class="box-1 double hover-element">
         <button class="head"></button>
         <button id="person-6" class="enlarge"></button>
       </div>
