--- a/index.html
+++ b/index.html
@@ -105,27 +105,19 @@
           <div class="container">
               <div class="content">
                   <h2>Early 20th Century: The Start of AI</h2>
-                  <p>AI first began being discussed in the early 20th century with science fiction that popularized the idea of artificially intelligent robots. Media portrayed this possibility through movies and shows, which helped spark the work within the scientific community who pondered the question “Can we train machines to use available information and reason to solve problems and make decisions?” 
-          </p>
-          <div class="dropdown-content">
-            <p>This was brought forth by Alan Turing who explored the possibilities of AI in his 1950’s paper Computing Machinery and Intelligence. While having ideas that could have made AI much more of a reality, Turing encountered obstacles. 
-              Before 1949, computers lacked the ability to store commands. This translates to computers knowing what to do when told, but being unable to remember this information. 
-              Computing was extremely expensive and access was limited which prevented such advancements to be made at the time</p>
-          </div>
+                  <p>AI first began being discussed in the early 20th century with science fiction that popularized the idea of artificially intelligent robots. Media portrayed this possibility through movies and shows, which helped spark the work within the scientific community who pondered the question “Can we train machines to use available information and reason to solve problems and make decisions?” This was brought forth by Alan Turing who explored the possibilities of AI in his 1950’s paper Computing Machinery and Intelligence. While having ideas that could have made AI much more of a reality, Turing encountered obstacles. Before 1949, computers lacked the ability to store commands. This translates to computers knowing what to do when told, but being unable to remember this information.Computing was extremely expensive and access was limited which prevented such advancements to be made at the time.</p>
               </div>
           </div>
           <div class="container">
               <div class="content">
                   <h2>The First AI: Logic Theorist 1956</h2>
-                  <p>Fast forward to the mid 50s and the first AI program titled Logic Theorist was presented by Allen Newell, Cliff Shaw, and Herbert Simon's. It attempted to emulate the problem solving abilities of people. This showcased that AI was possible and could be achieved while helping propel the next 20 years of research. 
-          </p>
+                  <p>Fast forward to the mid 50s and the first AI program titled Logic Theorist was presented by Allen Newell, Cliff Shaw, and Herbert Simon's. It attempted to emulate the problem solving abilities of people. This showcased that AI was possible and could be achieved while helping propel the next 20 years of research.</p>
               </div>
           </div>
           <div class="container">
               <div class="content">
                   <h2>1950-1970s</h2>
-                  <p>Through the mid 1950s till the 1970s, the computer science community continued to tinker on with AI encountering both success and setbacks. These decades showcased that in order to reach artificial intelligence, we had to focus on refining natural language processing, abstract thinking, and self recognition. 
-          </p>
+                  <p>Through the mid 1950s till the 1970s, the computer science community continued to tinker on with AI encountering both success and setbacks. These decades showcased that in order to reach artificial intelligence, we had to focus on refining natural language processing, abstract thinking, and self recognition.</p>
               </div>
           </div>
           <div class="container">
@@ -137,21 +129,15 @@
       <div class="container">
               <div class="content">
                   <h2>Expert Systems</h2>
-                  <p>Introduced by Edward Feigenbaum, expert systems exploded onto the scene. These could ask an expert in any field questions about every situation possible, internalize this data, and then were able to recount it to a non expert.</p>
-          <div class="dropdown-content">
-            <p>Japanese governments endeavors with the Fifth Generation Project (heavily funded expert systems that focused on computer processing, logic programming, and improving AI overall) </p>
-          </div>
+                  <p>Introduced by Edward Feigenbaum, expert systems exploded onto the scene. These could ask an expert in any field questions about every situation possible, internalize this data, and then were able to recount it to a non expert. Japanese governments endeavors with the Fifth Generation Project (heavily funded expert systems that focused on computer processing, logic programming, and improving AI overall) </p>
               </div>
           </div>
       <div class="container">
               <div class="content">
                   <h2>AI in the Late 90s and Early 2000s</h2>
-                  <p>AI was finally reaching the point that scholars like Turing imagined it could be, examples of this: 
-            <div class="dropdown-content">
-              <p>1997: world chess champ and grandmaster Gary Kasparov lost to IBM's Deep Blue, chess playing computer program 
-                1997: speech recognition software created by Dragon Systems was implemented on Windows 
-                Late 1990s: Kismet created by Dr. Cynthia Breazeal, a robot that could recognize and mimic human emotions </p>
-            </div>
+                  <p>AI was finally reaching the point that scholars like Turing imagined it could be, examples of this: 1997: world chess champ and grandmaster Gary Kasparov lost to IBM's Deep Blue, chess playing computer program 
+                    1997: speech recognition software created by Dragon Systems was implemented on Windows 
+                    Late 1990s: Kismet created by Dr. Cynthia Breazeal, a robot that could recognize and mimic human emotions </p>
               </div>
           </div>
       <div class="container">
@@ -163,14 +149,13 @@
       <div class="container">
               <div class="content">
                   <h2>Deep Mind's AlphaGo Program 2016</h2>
-                  <p> Powered by a deep neural network,DeepMind's AlphaGo program beats the world champion Go player, in a five-game match. This victory over Lee Sodol is very impressive as there are an immense number of possible moves as the game progresses (over 14.5 trillion after just four moves!). 
-                  </p>
+                  <p> Powered by a deep neural network,DeepMind's AlphaGo program beats the world champion Go player, in a five-game match. This victory over Lee Sodol is very impressive as there are an immense number of possible moves as the game progresses (over 14.5 trillion after just four moves!). </p>
               </div>
           </div>
       <div class="container">
               <div class="content">
                   <h2> The Rise of Generative AI 2023 </h2>
-                  <p> We have watched largelanguage models, or LLMs, such as ChatGPT expand the capacity of AI use and potential to increase enterprise value. With these new generative practices, deep-learning models can be pre-trained on vast amounts of raw, unlabeled data.</p>
+                  <p> We have watched large language models, or LLMs, such as ChatGPT expand the capacity of AI use and potential to increase enterprise value. With these new generative practices, deep-learning models can be pre-trained on vast amounts of raw, unlabeled data.</p>
               </div>
           </div>
       </div>
