--- a/index.html
+++ b/index.html
@@ -176,13 +176,11 @@
         <div class="container">
           <div class="content">
             <h2>The First AI: Logic Theorist 1956</h2>
-            <p>
-              Fast forward to the mid 50s and the first AI program titled Logic
+            <p>Fast forward to the mid 50s and the first AI program titled Logic
               Theorist was presented by Allen Newell, Cliff Shaw, and Herbert
               Simon's. It attempted to emulate the problem solving abilities of
               people. This showcased that AI was possible and could be achieved
-              while helping propel the next 20 years of research.
-            </p>
+              while helping propel the next 20 years of research.</p>
           </div>
       <div class="container">
               <div class="content">
@@ -204,44 +202,28 @@
               Introduced by Edward Feigenbaum, expert systems exploded onto the
               scene. These could ask an expert in any field questions about
               every situation possible, internalize this data, and then were
-              able to recount it to a non expert.
+              able to recount it to a non expert. Japanese governments endeavors with the Fifth Generation Project (heavily funded expert systems that focused on computer processing, logic programming, and improving AI overall)
             </p>
-            <div class="dropdown-content">
-              <p>
-                Japanese governments endeavors with the Fifth Generation Project
-                (heavily funded expert systems that focused on computer
-                processing, logic programming, and improving AI overall)
-              </p>
-            </div>
           </div>
         </div>
         <div class="container">
           <div class="content">
             <h2>AI in the Late 90s and Early 2000s</h2>
-            <p>
-              AI was finally reaching the point that scholars like Turing
-              imagined it could be, examples of this:
-            </p>
-            <div class="dropdown-content">
-              <p>
-                1997: world chess champ and grandmaster Gary Kasparov lost to
-                IBM's Deep Blue, chess playing computer program 1997: speech
-                recognition software created by Dragon Systems was implemented
-                on Windows Late 1990s: Kismet created by Dr. Cynthia Breazeal, a
-                robot that could recognize and mimic human emotions
-              </p>
-            </div>
+            <p> AI was finally reaching the point that scholars like Turing
+              imagined it could be, examples of this:1997: world chess champ and grandmaster Gary Kasparov lost to
+              IBM's Deep Blue, chess playing computer program 1997: speech
+              recognition software created by Dragon Systems was implemented
+              on Windows Late 1990s: Kismet created by Dr. Cynthia Breazeal, a
+              robot that could recognize and mimic human emotions</p>
           </div>
         </div>
         <div class="container">
           <div class="content">
             <h2>Deep Neural Networks 2015</h2>
-            <p>
-              Baidu's Minwa supercomputer runs on a special kind of deep neural
+            <p>Baidu's Minwa supercomputer runs on a special kind of deep neural
               network known as a convolutional neural network to identify and
               categorize images with a higher rate of accuracy than the average
-              human.
-            </p>
+              human.</p>
           </div>
         </div>
         <div class="container">
@@ -259,12 +241,10 @@
         <div class="container">
           <div class="content">
             <h2>The Rise of Generative AI 2023</h2>
-            <p>
-              We have watched largelanguage models, or LLMs, such as ChatGPT
+            <p>We have watched large language models, or LLMs, such as ChatGPT
               expand the capacity of AI use and potential to increase enterprise
               value. With these new generative practices, deep-learning models
-              can be pre-trained on vast amounts of raw, unlabeled data.
-            </p>
+              can be pre-trained on vast amounts of raw, unlabeled data.</p>
           </div>
         </div>
       </div>
