--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
       <div class="sub-title">
         <ul>
           <il>
-            <h2>Narrow AI or Also Known As ANI</h2>
+            <h2>Narrow AI or Also Known As ANI
             <p>
               Narrow AI is any kind of artificial intelligence system and/or
               form of AI technology that's sole purpose is to complete a set of
@@ -228,9 +228,10 @@
               include image recognition software, self-driving cars, and AI
               virtual assistants.
             </p>
+            </h2>
           </il>
           <il>
-            <h2>Artifical Genral Intelligence (AGI)</h2>
+            <h3>Artifical Genral Intelligence (AGI)
             <p>
               Artificial General Intelligence and/or general AI is any form of
               artificial intelligence that's capacity for thinking, learning,
@@ -241,9 +242,10 @@
               such as supercomputers, quantum hardware and generative AI models
               like that of ChatGPT.
             </p>
+            </h3>
           </il>
           <il>
-            <h2>Artificial Superintelligence</h2>
+            <h4>Artificial Superintelligence
             <p>
               Artificial Superintelligence and/or super AI is more of a figment
               of the imgaination and is showcased through numerous science
@@ -258,9 +260,10 @@
               intelligence of human beings and will be exceedingly better at
               everything that we do."
             </p>
+            </h4>
           </il>
           <il>
-            <h2>Reactive Machine AI</h2>
+            <h5>Reactive Machine AI
             <p>
               While reactive machine AI's are the most fundemntal type of AI and
               can respond to immediate requests/tasks, the technology is greatly
@@ -274,9 +277,10 @@
               machine Deep Blue, whihc in 1997 beat grandmaster Garry Kasparov
               in a game of chess.
             </p>
+            </h5>
           </il>
           <il>
-            <h2>Limited Memory AI</h2>
+            <h6>Limited Memory AI
             <p>
               The expertises of limited memory AI can be found in it's ability
               to store previously retrieved data and then anazlye it to make
@@ -291,14 +295,17 @@
               assistants to self-driving cars that constantly observe and
               process environmental data around them while driving on roads.
             </p>
+            </h6>
           </il>
           <il>
-            <h2>Theory of Mind AI</h2>
+            <h7>Theory of Mind AI
             <p>.....</p>
           </il>
+        </h7>
           <il>
-            <h2>Self-Aware AI</h2>
+            <h8>Self-Aware AI
             <p>......</p>
+            </h8>
           </il>
         </ul>
       </div>
