--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <div id="temp"></div>
     <!--People Section-->
     <div id="flex-container">
-      <div id="element" class="box-1 double">
+      <div class="box-1 double element">
         <object
           type="image/svg+xml"
           id="personhead"
@@ -59,7 +59,7 @@
           data="img/personbody.svg"
         ></object>
       </div>
-      <div class="box-1 double">
+      <div class="box-1 double element">
         <object
           type="image/svg+xml"
           id="personhead"
@@ -72,7 +72,7 @@
           data="img/personbody.svg"
         ></object>
       </div>
-      <div class="box-1 double">
+      <div class="box-1 double element">
         <object
           type="image/svg+xml"
           id="personhead"
@@ -85,7 +85,7 @@
           data="img/personbody.svg"
         ></object>
       </div>
-      <div class="box-1 double">
+      <div class="box-1 double element">
         <object
           type="image/svg+xml"
           id="personhead"
@@ -98,7 +98,7 @@
           data="img/personbody.svg"
         ></object>
       </div>
-      <div class="box-1 double">
+      <div class="box-1 double elementRobot">
         <object
           type="image/svg+xml"
           id="robothead"
@@ -110,6 +110,7 @@
           id="robotbody"
           data="img/robotbodyagain.svg"
         ></object>
+        <div id="element" class= "hover-element"></div>
       </div>
     </div>
     <!--Dividing section-->
