--- a/index.html
+++ b/index.html
@@ -300,12 +300,34 @@
           </il>
           <il>
             <h7>Theory of Mind AI
-            <p>.....</p>
+            <p>Theory of Mind AI refers to the concept of artificial intelligence being
+              able to comprehend and notice the emotional state of others around them. 
+              This theory of AI, in particular, has prompted a series of (both) worrisome 
+              but yet realistic concerns to be asked about the possibility of technology
+              in replacing human beings in the labor force and the high likelihood of the 
+              machines to incorrectly analyze emotions, especially within the beginning
+              stages of the process. However, there are also positive benefits that can 
+              come from such an achievement in tech, as it would be a substantial 
+              milestone in AI development and might even lead to the eventually 
+              enhancement of other, pre-existing technologies we already have around us.
+              For instance, a senior AI researcher at the insurance company of, Acrisure,
+              has already provided an example of how this kind of technology could 
+              revolutionize the AI vehicles of self-driving cars as, "A self-driving 
+              car may perform better than a human driver the majority of the time
+              because it doesn't make the same human errors. But if you, as a driver, 
+              know that your neighbor's kid tends to play close to the street after school
+              you'll know instinctively to slow down while passing that neighbor's driveway -
+              something an AI vehicle equipped with basic limited memory wouldn't be able to 
+              do (Betz, 2024).</p>
           </il>
         </h7>
           <il>
             <h8>Self-Aware AI
-            <p>......</p>
+            <p>Self-Aware AI describes any kind of artificial intelligence that possesses self-awareness.
+              It's one of the ultimate goals in AI development and is speculated that when/if this goal
+              of AI is reached will likely result in AI machines no longer being under our control, as 
+              they won't only be able to navigate through human emotion and analyze it but will be 
+              capable of having a sense of self, as well.</p>
             </h8>
           </il>
         </ul>
