--- a/index.html
+++ b/index.html
@@ -318,16 +318,18 @@
               know that your neighbor's kid tends to play close to the street after school
               you'll know instinctively to slow down while passing that neighbor's driveway -
               something an AI vehicle equipped with basic limited memory wouldn't be able to 
-              do (Betz, 2024).</p>
+              do (Betz, 2024).
+            </p>
+            </h7>
           </il>
-        </h7>
           <il>
             <h8>Self-Aware AI
             <p>Self-Aware AI describes any kind of artificial intelligence that possesses self-awareness.
               It's one of the ultimate goals in AI development and is speculated that when/if this goal
               of AI is reached will likely result in AI machines no longer being under our control, as 
               they won't only be able to navigate through human emotion and analyze it but will be 
-              capable of having a sense of self, as well.</p>
+              capable of having a sense of self, as well.
+            </p>
             </h8>
           </il>
         </ul>
