--- a/index.html
+++ b/index.html
@@ -300,7 +300,8 @@
           </il>
           <il>
             <h7>Theory of Mind AI
-            <p>Theory of Mind AI refers to the concept of artificial intelligence being
+            <p>
+              Theory of Mind AI refers to the concept of artificial intelligence being
               able to comprehend and notice the emotional state of others around them. 
               This theory of AI, in particular, has prompted a series of (both) worrisome 
               but yet realistic concerns to be asked about the possibility of technology
@@ -324,7 +325,8 @@
           </il>
           <il>
             <h8>Self-Aware AI
-            <p>Self-Aware AI describes any kind of artificial intelligence that possesses self-awareness.
+            <p>
+              Self-Aware AI describes any kind of artificial intelligence that possesses self-awareness.
               It's one of the ultimate goals in AI development and is speculated that when/if this goal
               of AI is reached will likely result in AI machines no longer being under our control, as 
               they won't only be able to navigate through human emotion and analyze it but will be 
