--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <section id="container-title">
       <div id="title">
         <h1>Group 4:</h1>
-        <p>AI Technology Test</p>
+        <p>AI Technology</p>
       </div>
     </section>
     <!--Pop up element sections, can be rearranged if the area is not where we want the content to be-->
