--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
           </il>
           <il>
             <h7
-              >Theory of Mind AI
+              Theory of Mind AI
               <p>
                 Theory of Mind AI refers to the concept of artificial
                 intelligence being able to comprehend and notice the emotional
@@ -392,7 +392,7 @@
           </il>
           <il>
             <h8
-              >Self-Aware AI
+              Self-Aware AI
               <p>
                 Self-Aware AI describes any kind of artificial intelligence that
                 possesses self-awareness. It's one of the ultimate goals in AI
